--- a/src/app/user/show-user/edit-schedule/edit-schedule.component.html
+++ b/src/app/user/show-user/edit-schedule/edit-schedule.component.html
@@ -3,7 +3,7 @@
 
 <div *ngIf="principal">
    
-    <h2 class="linksTitle"><a [routerLink]="['/users']"> Usuarios</a> >>  <a [routerLink]="['/users/show/' + user.id]">{{ user.name }}</a> >> Horarios</h2>
+    <h2 class="linksTitle"><a [routerLink]="['/users']"> Usuarios</a> /  <a [routerLink]="['/users/show/' + user.id]">{{ user.name }}</a> >> Horarios</h2>
 
     <div class="form" [ngClass]="{'loadingForm': sendingData == true}">
         <h1 align="center" (click)="con(user.schedules)">Horarios</h1>
