--- a/src/app/receipt/debtors-monthly/debtors-monthly.component.html
+++ b/src/app/receipt/debtors-monthly/debtors-monthly.component.html
@@ -39,7 +39,7 @@
 </div>
 
 <div>
-  <h3>Alumnos sin Adeudo: {{ regularUsers.length +  "/" + (pendUsersBack.length + regularUsersBack.length) }}</h3>
+  <h3>Alumnos sin Adeudo: {{ regularUsersBack.length +  "/" + (pendUsersBack.length + regularUsersBack.length) }}</h3>
   <form class="flex">
     <div class="l4">
       
